--- a/artists.html
+++ b/artists.html
@@ -108,27 +108,40 @@
           <!-- Artist Listings Start -->
           <!-- Left Column  -->
             <!-- Line 1 -->
-            <a href="#test1" class="clickable-div">
+            <a href="./bowen.html" class="clickable-div">
               <div class="row news-line">
                 <div class="col-md-1">
-                  <img src="http://lorempixel.com/70/70" alt="">
+                  <img class="artists-image-final" src="./images/bowen2.jpg" alt="">
                 </div>                      
                 <div class="col-md-10 news-text">
-                  <p class="content-header news-header">The Killers</p>
-                  <p class="content-subline">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit quasi provident, saepe repudiandae magnam sed accusamus.</p>
+                  <p class="content-header news-header">Bowen</p>
+                  <p class="content-subline">A Southern California native and the son of four generations of musicians, Aaron Bowen has been a student of music, and in particular a student of the guitar, from an early age.</p>
                 </div>
               </div>
             </a>
               
             <!-- Line 2 -->
-            <a href="#test1" class="clickable-div">
+            <a href="http://www.wearecaliber.com/who-is-caliber" class="clickable-div">
               <div class="row news-line">
                 <div class="col-md-1">
-                  <img src="http://lorempixel.com/70/70" alt="">
+                  <img class="artists-image-final" src="./images/artists_caliber.jpg" alt="">
                 </div>                      
                 <div class="col-md-10 news-text">
-                  <p class="content-header news-header">The Killers</p>
-                  <p class="content-subline">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit.</p>
+                  <p class="content-header news-header">Caliber</p>
+                  <p class="content-subline">With Caliber, audience revelry is encouraged, and inevitable! This San Diego based ensemble has been engaging audiences, with outstanding reviews for over six years, and is more exciting than ever!</p>
+                </div>
+              </div>
+            </a>
+
+            <!-- Line 3 -->
+            <a href="http://www.steampoweredgiraffe.com/" class="clickable-div">
+              <div class="row news-line">
+                <div class="col-md-1">
+                  <img class="artists-image-final" src="./images/artists_steam.jpg" alt="">
+                </div>                      
+                <div class="col-md-10 news-text">
+                  <p class="content-header news-header">Steam Powered Giraffe</p>
+                  <p class="content-subline">Steampunk and Futurism mesh together with mime and music to create a breathtakingly imaginative act. The robots of Steam Powered Giraffe are like nothing you've ever seen. </p>
                 </div>
               </div>
             </a>
@@ -141,11 +154,11 @@
             <div>
               <h3 class="spotlight-title">Artist Spotlight<span class="glyphicon glyphicon-search spotlight-glyp" aria-hidden="true"></span></h3>
             </div>
-            <h4 class="spotlight-subtitle">The Decemberists</h4>
-            <img class="spotlight-image" src="http://lorempixel.com/325/200" alt="">
-            <p>Starting on January 11th, The Decemberists broke onto the scene. Frontman Jimmy Whales paired with Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam unde numquam eius, a optio placeat doloremque assumenda expedita, ipsa itaque dolores dicta repellat consectetur pariatur tenetur neque illum. Debitis, recusandae.</p>
+            <h4 class="spotlight-subtitle">The Silent Comedy</h4>
+            <img class="spotlight-image" src="./images/artists_silent.jpg" alt="">
+            <p>The Silent Comedy is a San Diego-based group of musicians mixing Americana, Folk and Rock n’ Roll into a sound that is best understood by experiencing their live show. Brothers Joshua and Jeremiah Zimmerman started the band to capture the feeling of the bar culture they worked in and the revival meetings they grew up attending. The outcome is an experience that has been described as “a whiskey tent revival.”</p>
               
-             <a href="#test3">Read more...</a>
+             <a href="http://sandiegoalist.cityvoter.com/the-silent-comedy/biz/661826">Read more...</a>
           </div>
         <!-- End Spotlight -->
         </div>
@@ -154,32 +167,18 @@
       <div class="row top-events-row">
         <h2 class="content-title">Hot Artists</h2> 
         <!-- <div class="home-category"><h2 class="content-title">Top Events</h2></div>  -->       
-        <a href="#test1" class="clickable-div">
-          <div class="col-md-3 top-event">
-            <img src="http://lorempixel.com/200/100" alt="">
-            <p class="content-header">The Killers</p>
-            <p class="content-subline">Decemeber 11th</p>
+        <a href="http://www.liquid-blue.com/Bio.htm" class="clickable-div">
+          <div class="col-md-6 top-event artist-finale">
+            <img src="./images/artists_liquid.jpg" alt="">
+            <p class="content-header">Liquid Blue</p>
+            <p class="content-subline">Liquid Blue is the most accomplished and highly acclaimed party band in the event business. Music To Move You" is the band's official slogan and the audience is sure to be pumped up and excited from the first number until the finale. </p>
           </div>
         </a>
-        <a href="#test1" class="clickable-div">
-          <div class="col-md-3 top-event">        
-            <img src="http://lorempixel.com/200/100" alt="">
-            <p class="content-header">The Killers</p>
-            <p class="content-subline">Decemeber 11th</p>
-          </div>
-        </a>
-        <a href="#test1" class="clickable-div">
-          <div class="col-md-3 top-event">
-            <img src="http://lorempixel.com/200/100" alt="">
-            <p class="content-header">The Killers</p>
-            <p class="content-subline">Decemeber 11th</p>
-          </div>
-        </a>
-        <a href="#test1" class="clickable-div">
-          <div class="col-md-3 top-event">
-            <img src="http://lorempixel.com/200/100" alt="">
-            <p class="content-header">The Killers</p>
-            <p class="content-subline">Decemeber 11th</p>
+        <a href="http://www.strangeaffliction.com/" class="clickable-div">
+          <div class="col-md-6 top-event artist-finale" >        
+            <img src="./images/artists_affliction.jpg" alt="">
+            <p class="content-header">Strange Affliction</p>
+            <p class="content-subline">Is a Four piece Rock Band from North San Diego County playing songs from the 60s through today with a few originals thrown in to the mix. Their hard driving attitude, enthusiasm and genuine love of music is most definitely contagious hence the name ..... Strange Affliction.</p>
           </div>
         </a>
       </div>    
