--- a/bowen.html
+++ b/bowen.html
@@ -84,46 +84,10 @@
 
       <!-- Image -->
       <div class="row">
-        <h2 class="artists-title">Aaron Bowen</h2>
-        <div class= "col-md-12">
-          <div id="myCarousel" class="carousel slide" data-interval="4000" data-ride="carousel">
-            <!-- Carousel indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>   
-            <!-- Carousel items -->
-            <div class="carousel-inner">
-              <div class="active item">
-                <img src="./images/ryan.png" alt="">
-                <div class="carousel-caption">
-                  <h3>Ryan Adams and Jenny Lewis</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-              </div>
-              <div class="item">
-                <img src="./images/mystic.jpg" alt="">
-                <div class="carousel-caption">
-                  <h3>Mystic Braves</h3>
-                  <p>Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
-                </div>
-              </div>
-              <div class="item">
-                <img src="./images/francisco.jpg" alt="">
-                <div class="carousel-caption">
-                  <h3>Francisco the Man</h3>
-                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                </div>
-              </div>
-            </div> <!-- End Carousel items -->
-            <!-- Carousel nav -->
-            <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a class="carousel-control right" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
+        <h2 class="artists-title">Club 207</h2>
+        <div class= "col-md-12 artists-pic-container">
+          <div class="artists-pic">
+          <img class="artists-pic" src="./images/bowen2.jpg">
           </div>
         </div>
       </div>
