--- a/events.html
+++ b/events.html
@@ -170,8 +170,8 @@
                         <div class="col-md-1">
                         </div>                      
                         <div class="col-md-10">
-                          <p class="content-line">A great concert line-up for all of the jazz fans.</p>
-                          <!-- <a href="./events_organized.html">Learn more.</a> -->
+                          <p class="content-line">Come out and celebrate with the OG family and friends. OG brings to you a night with great people, booze, bass, and UNITY.</p>
+                          <a href="http://organizedgrime.org/events/">Learn more.</a>
                         </div>
                       </div>
                     </div>
@@ -210,8 +210,8 @@
                         <div class="col-md-1">
                         </div>                      
                         <div class="col-md-10">
-                          <p class="content-line">A great concert line-up for all of the jazz fans.</p>
-                          <!-- <a href="./events_ron.html">Learn more.</a> -->
+                          <p class="content-line">RoofTop600 will host a charitable evening of acoustic performances from local artists Ron Morabito and Arun on Wednesday, December 17 to benefit the San Diego Boys and Girls Club of San Dieguito as well as the Big Brothers Big Sisters of San Diego County. Beginning at 7 p.m., guests will be able to enjoy the live musical performances while sipping on RoofTop600’s signature cocktails. Funds for the two organizations will be raised through suggested donations, raffle items and CD sales.</p>
+                          <a href="http://patch.com/california/santee/rooftop600-andaz-san-diego-host-ron-morabito-and-arun-holiday-hope-concert-0">Learn more.</a>
                         </div>
                       </div>
                     </div>
@@ -250,8 +250,8 @@
                         <div class="col-md-1">
                         </div>                      
                         <div class="col-md-10">
-                          <p class="content-line">A great concert line-up for all of the jazz fans.</p>
-                          <!-- <a href="./events_gilbert.html">Learn more.</a> -->
+                          <p class="content-line">Jazz trumpeter Gilbert Castellanos presents a special tribute to the music of Thelonious Monk. Featuring Joshua White, Kevin Kanner, and Dean Hulett. $20 online tickets are available until midnight PST the night before the event.</p>
+                          <a href="http://98bottlessd.com/entertainment/calendar/">Learn more.</a>
                         </div>
                       </div>
                     </div>
@@ -290,8 +290,8 @@
                         <div class="col-md-1">
                         </div>                      
                         <div class="col-md-10">
-                          <p class="content-line">A great concert line-up for all of the jazz fans.</p>
-                          <!-- <a href="./events_nerdy.html">Learn more.</a> -->
+                          <p class="content-line">Get nerdy with us this New Years Eve! Ticket price includes party favors, DJ, dancing, light snacks and a champagne toast!</p>
+                          <a href="http://98bottlessd.com/event/nerdy-new-year/">Learn more.</a>
                         </div>
                       </div>
                     </div>
