--- a/index.html
+++ b/index.html
@@ -92,24 +92,21 @@
             <!-- Carousel items -->
             <div class="carousel-inner">
               <div class="active item">
-                <img src="./images/ryan.png" alt="">
+                <img src="./images/home_mike.jpg" alt="">
                 <div class="carousel-caption">
-                  <h3>Ryan Adams and Jenny Lewis</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <h3>DJ Mike Czech</h3>
                 </div>
               </div>
               <div class="item">
-                <img src="./images/mystic.jpg" alt="">
+                <img src="./images/news_johnny.jpg" alt="">
                 <div class="carousel-caption">
-                  <h3>Mystic Braves</h3>
-                  <p>Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
+                  <h3>Johhny Marr</h3>
                 </div>
               </div>
               <div class="item">
-                <img src="./images/francisco.jpg" alt="">
+                <img src="./images/news_capitol.jpg" alt="">
                 <div class="carousel-caption">
-                  <h3>Francisco the Man</h3>
-                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                  <h3>Capitol Cities: retro</h3>
                 </div>
               </div>
             </div> <!-- End Carousel items -->
@@ -185,27 +182,27 @@
                 <h3 class="content-title">Top Stories</h3>
               </div>
               <!-- First Story -->
-              <a href="#test1" class="clickable-div">
+              <a href="./news_johnny.html" class="clickable-div">
                 <div class="story">
                   <div class="content-image-wrap">
-                    <img src="./images/concert1.jpg" alt="">
+                    <img src="./images/news_johnny.jpg" alt="">
                   </div>
                   <div class="content-paragraph">
-                    <p class="content-header">Capital Cities' concert review</p>
-                    <p class="content-line"> Lorem ipsum la to fo df ljsdf lknsd flkjdf jl;ksjdffds fafdsfa ds fdsa fd  d dsa fdasf f dsa  </p>                    
+                    <p class="content-header">Johnny Marr hits his solo stride</p>
+                    <p class="content-line">Johnny Marr has new goals.</p>                    
                   </div>      
                   <div class="clear"></div>
                 </div>
               </a>
 
               <!-- Second Story -->
-              <a href="#test1" class="clickable-div">
+              <a href="./news_el.html" class="clickable-div">
                 <div class="story">
                   <div class="content-image-wrap">
-                    <img src="./images/julian.jpg" alt="">
+                    <img src="./images/news_el.jpg" alt="">
                   </div>
                   <div class="content-paragraph">
-                    <p class="content-header">Artpower! Julian Page<br/>
+                    <p class="content-header">Members of El Monte Slim form new band<br/>
                   </div>
                   <div class="clear"></div>
                 </div>
@@ -221,25 +218,25 @@
             </div>
 
               <!-- First Artist -->
-              <a href="#test1" class="clickable-div">
+              <a href="./bowen.html" class="clickable-div">
                 <div class="story">
                   <div class="content-image-wrap">
-                    <img src="./images/fish.jpg" alt="">
+                    <img src="./images/bowen2.jpg" alt="">
                   </div>
                   <div class="content-paragraph">
-                    <p class="content-header">71 Fish</p>
+                    <p class="content-header">Bowen</p>
                   </div>
                   <div class="clear"></div>
                 </div>
               </a>
               <!-- Second Artist -->
-              <a href="#test1" class="clickable-div">
+              <a href="http://www.wearecaliber.com/who-is-caliber" class="clickable-div">
                 <div class="story">
                   <div class="content-image-wrap">
-                    <img src="./images/ad.jpg" alt="">
+                    <img src="./images/artists_caliber.jpg" alt="">
                   </div>
                   <div class="content-paragraph">
-                    <p class="content-header">Ad Seg</p>
+                    <p class="content-header">Caliber</p>
                   </div>
                   <div class="clear"></div>
                 </div>
@@ -257,11 +254,11 @@
           <h3 class="spotlight-title">Artist Spotlight<span class="glyphicon glyphicon-search spotlight-glyp" aria-hidden="true"></span></h3>
           
         </div>
-        <h4 class="spotlight-subtitle">The Decemberists</h4>
-        <img class="spotlight-image" src="http://lorempixel.com/325/200" alt="">
-        <p>Starting on January 11th, The Decemberists broke onto the scene. Frontman Jimmy Whales paired with Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam unde numquam eius, a optio placeat doloremque assumenda expedita, ipsa itaque dolores dicta repellat consectetur pariatur tenetur neque illum. Debitis, recusandae.</p>
+        <h4 class="spotlight-subtitle">The Silent Comedy</h4>
+        <img class="spotlight-image" src="./images/artists_silent.jpg" alt="">
+        <p>The Silent Comedy is a San Diego-based group of musicians mixing Americana, Folk and Rock n’ Roll into a sound that is best understood by experiencing their live show. Brothers Joshua and Jeremiah Zimmerman started the band to capture the feeling of the bar culture they worked in and the revival meetings they grew up attending. The outcome is an experience that has been described as “a whiskey tent revival.”</p>
           
-         <a href="#test3">Read more...</a>
+         <a href="http://sandiegoalist.cityvoter.com/the-silent-comedy/biz/661826">Read more...</a>
       </div>
         <!-- End Spotlight -->
       </div>
