--- a/news.html
+++ b/news.html
@@ -99,24 +99,21 @@
                 <!-- Carousel items -->
                 <div class="carousel-inner">
                   <div class="active item">
-                    <img src="./images/ryan.png" alt="">
+                    <img src="./images/news_johnny.jpg" alt="">
                     <div class="carousel-caption">
-                      <h3>Ryan Adams and Jenny Lewis</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                      <h3>Johhny Marr</h3>
                     </div>
                   </div>
                   <div class="item">
-                    <img src="./images/mystic.jpg" alt="">
+                    <img src="./images/news_el.jpg" alt="">
                     <div class="carousel-caption">
-                      <h3>Mystic Braves</h3>
-                      <p>Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
+                      <h3>El Monte Slim: new band</h3>
                     </div>
                   </div>
                   <div class="item">
-                    <img src="./images/francisco.jpg" alt="">
+                    <img src="./images/news_black.jpg" alt="">
                     <div class="carousel-caption">
-                      <h3>Francisco the Man</h3>
-                      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                      <h3>Black Star Elephant, by Nico &amp; Vinz</h3>
                     </div>
                   </div>
                 </div> <!-- End Carousel items -->
@@ -136,9 +133,10 @@
               <div>
                 <h3 class="spotlight-title">Featured News<span class="glyphicon glyphicon-pushpin spotlight-glyp" aria-hidden="true"></span></h3>
               </div>
-              <img class="spotlight-image" src="http://lorempixel.com/200/150" alt="">
-              <p>Starting on January 11th, The Decemberists broke onto the scene. Frontman Jimmy Whales paired with Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam unde numquam eius, a optio placeat doloremque assumenda expedita, ipsa itaque dolores dicta repellat consectetur pariatur tenetur neque illum. Debitis, recusandae.</p>
-               <a href="#test3">Read more...</a>
+              <h4 class="spotlight-subtitle">Capitol Cities concert review</h4>
+              <img class="spotlight-image" src="./images/news_capitol.jpg" alt="">
+              <p>Playing nearly everything from its debut, In a Tidal Wave of Mystery — plus crowd-pleasing covers of Michael Jackson, and Madonna — the set was a welcome reminder of what I learned months earlier about Capital Cities’ spirited retro sound: It’s good.</p>
+               <a href="http://www.sandiegoreader.com/news/2014/dec/12/concert-capital-cities-spirited-retro-sound/">Read more...</a>
             </div>
             <!-- End Spotlight -->
           </div>
@@ -147,33 +145,25 @@
           <!-- Start news row -->
           <div class="row ">
             <h2 class="content-title">Top News</h2>
-            <a href="#test1" class="clickable-div">
-              <div class="col-md-3 top-event top-news">
-                <img src="http://lorempixel.com/200/100" alt="">
-                <p class="content-header news-header">The Killers</p>
-                <p class="content-subline">Decemeber 11th</p>
+            <a href="./news_johnny.html" class="clickable-div">
+              <div class="col-md-4 top-event top-news">
+                <img class="news-image-wrap" src="./images/news_johnny.jpg" alt="">
+                <p class="content-header news-header">Johnny Marr hits his solo stride</p>
+                <p class="content-subline">Johnny Marr has new goals. You’d think the guitarist for The Smiths would be content more than 30 years into his storied career. He’s not.</p>
               </div>
             </a>
-            <a href="#test1" class="clickable-div">
-              <div class="col-md-3 top-event top-news">        
-                <img src="http://lorempixel.com/200/100" alt="">
-                <p class="content-header news-header">The Killers</p>
-                <p class="content-subline">Decemeber 11th</p>
-                <p class="news-paragraph content-line">Lorem ipsum dolor sit amet, consectetur adipisicing elit. liquam natus.</p>
+            <a href="./news_el.html" class="clickable-div">
+              <div class="col-md-4 top-event top-news">        
+                <img class="news-image-wrap" src="./images/news_el.jpg" alt="">
+                <p class="content-header news-header">Members of El Monte Slim form new band</p>
+                <p class="content-subline">Country / folk group El Monte Slim are on hiatus right now, three of its members have started up a new outfit called Ypsitucky.</p>
               </div>
             </a>
-            <a href="#test1" class="clickable-div">
-              <div class="col-md-3 top-event top-news">
-                <img src="http://lorempixel.com/200/100" alt="">
-                <p class="content-header news-header">The Killers</p>
-                <p class="content-subline">Decemeber 11th</p>
-              </div>
-            </a>
-            <a href="#test1" class="clickable-div">
-              <div class="col-md-3 top-event top-news">
-                <img src="http://lorempixel.com/200/100" alt="">
-                <p class="content-header news-header">The Killers</p>
-                <p class="content-subline">Decemeber 11th</p>
+            <a href="./news_black.html" class="clickable-div">
+              <div class="col-md-4 top-event top-news">
+                <img class="news-image-wrap" src="./images/news_black.jpg" alt="">
+                <p class="content-header news-header">Black Star Elephant, by Nico &amp; Vinz</p>
+                <p class="content-subline">Decemeber 12th, 2014</p>
               </div>
             </a>
           </div>    
@@ -185,27 +175,14 @@
             <!-- Left Column  -->
             <!-- Line 1 -->
             <div class="col-md-6">
-              <a href="#test1" class="clickable-div">
+              <a href="http://www.sandiegoreader.com/news/2014/dec/10/blurt-record-release-roundup/" class="clickable-div">
                 <div class="row news-line">
                   <div class="col-md-2">
-                    <img src="http://lorempixel.com/70/70" alt="">
+                    <img src="./images/news_round.jpg" alt="">
                   </div>                      
                   <div class="col-md-10 news-text">
-                    <p class="content-header news-header">The Killers</p>
-                    <p class="content-subline">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit quasi provident, saepe repudiandae magnam sed accusamus.</p>
-                  </div>
-                </div>
-              </a>
-                
-              <!-- Line 2 -->
-              <a href="#test1" class="clickable-div">
-                <div class="row news-line">
-                  <div class="col-md-2">
-                    <img src="http://lorempixel.com/70/70" alt="">
-                  </div>                      
-                  <div class="col-md-10 news-text">
-                    <p class="content-header news-header">The Killers</p>
-                    <p class="content-subline">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit.</p>
+                    <p class="content-header news-header">Record-release roundup</p>
+                    <p class="content-subline">New releases this week include Poor Life Choices by alt-country band Mark Kramer and the 12 Steps, Hurricane from Rob Bondurant (release party December 12 at 7 Grand), and 21st Century ShatMan by William Shatner impersonator ShatMan (soon to appear on TV’s Big Bang Theory).</p>
                   </div>
                 </div>
               </a>
@@ -214,26 +191,14 @@
             <!-- Right Column -->
             <div class="col-md-6">
               <!-- Line 1 -->
-              <a href="#test1" class="clickable-div">
+              <a href="http://www.sandiegoreader.com/news/2014/dec/03/note-bebel-gilberto-bossa-nova-popular-america/" class="clickable-div">
                 <div class="row news-line">
                     <div class="col-md-2">
-                      <img src="http://lorempixel.com/70/70" alt="">
+                      <img src="./images/news_bossa.jpg" alt="">
                     </div>                      
                     <div class="col-md-10 news-text">
-                      <p class="content-header news-header">The Killers</p>
-                      <p class="content-subline">@ The Melting Pot</p>
-                    </div>
-                  </div>
-                </a>
-                <!-- Line 2 -->
-                <a href="#test1" class="clickable-div">
-                  <div class="row news-line">
-                    <div class="col-md-2">
-                      <img src="http://lorempixel.com/70/70" alt="">
-                    </div>                      
-                    <div class="col-md-10 news-text">
-                      <p class="content-header news-header">The Killers</p>
-                      <p class="content-subline">@ The Melting Pot</p>
+                      <p class="content-header news-header">Bebel Gilberto made bossa nova popular in America</p>
+                      <p class="content-subline">Bebel Gilberto was born in New York in 1966, two years after a jazz record titled Getz/Gilberto made a style of music called bossa nova wildly popular in America. At the Grammy Awards in 1965, ...</p>
                     </div>
                   </div>
                 </a>
