--- a/venues_207.html
+++ b/venues_207.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>SDScene - 207 Nightclub</title>
+  <title>SDScene - Venues</title>
 
   <!-- Bootstrap core CSS -->
   <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
     <div class="top-line"></div>
       <!-- Top Bar -->
       <div id="tfheader">
-        <div id="wrap" class="container-fluid">
+        <div class="container-fluid">
           <div class="row">
             <!-- Title -->
             <div class="title-wrap">
@@ -54,17 +54,16 @@
       </div>
       <!-- End Top Bar -->
 
-
-    <div class="container-fluid">
+    <div  id="wrap" class="container-fluid">
       <!-- Static navbar -->
       <div class="row">
         <nav class="navbar navbar-default" role="navigation">
           <div class="container-fluid">
               <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active nav-li-final"><a href="./events.html">Events</a></li>
+                <li class="nav-li-final"><a href="./events.html">Events</a></li>
                 <li class="nav-li-final"><a href="./news.html">News</a></li>
-                <li class="nav-li-final"><a href="./venues.html">Venues</a></li>
+                <li class="active nav-li-final"><a href="./venues.html">Venues</a></li>
                 <li class="nav-li-final"><a href="./artists.html">Artists</a></li>
               </ul>
             </div><!--/.nav-collapse -->
@@ -83,85 +82,53 @@
       </div>
       <!-- End Breadcrumbs -->
 
-      <div class="row row-offcanvas row-offcanvas-right">
-
-        <div class="col-md-8">
-          <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-          </p>
-
-
-          <div class="row">
-            <div class="col-md-12">
-              <h2>207 Nightclub</h2>
-            </div>
+      <!-- Image -->
+      <div class="row">
+        <h2 class="artists-title">Club 207</h2>
+        <div class= "col-md-12 artists-pic-container">
+          <div class="artists-pic">
+          <img class="artists-pic" src="./images/venues_207.jpg">
           </div>
+        </div>
+      </div>
+      <br/>
+      <!-- End Image -->
+      <div class="row">
+        <div class="col-md-8 artists-bio">
+          <h3 class=""><h3>About</h3>
+              <p>207 Fifth Avenue, San Diego, CA 92101 (at the Hardrock Hotel) | 
+              <a>Directions</a><br/>619-764-6924 | 
+              <a href = "http://www.207sd.com/">bsite</a></p>
+              <p>207, located on the ground floor of the Hard Rock Hotel San Diego, is a "laid-back den of glamour featuring a dramatic bar with black leather accents and over-sized crystal chandeliers." Unwind over cocktails or watch a game on the largest TV screen in San Diego. Friday through Sunday nights, 207 guests are treated to music spun by DJs. Happy hour specials Monday through Friday from 3pm to 7pm.</p>
 
-          <div class="row">
-            <div class="col-md-12">
+              <h3>Upcoming Events</h3>
 
-              <img src = "./images/207.tiff" height = "400"/>
+              <p>Sunday Social with Sharam<br/>Sunday, December 14, 9:00 p.m.</p>
+              <p>Prayers, Julien-K, Pleasure Fix<br/>Thursday, December 18, 9:00 p.m.</p>
 
-              <h3>About</h3>
+              <h3>Happy Hours</h3>
 
-              <p>
-    207 Fifth Avenue, San Diego, CA 92101 (at the Hardrock Hotel) | <a>Directions</a><br/>
-    619-764-6924 | <a href = "http://www.207sd.com/">Website</a></p>
-
-<p>207, located on the ground floor of the Hard Rock Hotel San Diego, is a "laid-back den of glamour featuring a dramatic bar with black leather accents and over-sized crystal chandeliers." Unwind over cocktails or watch a game on the largest TV screen in San Diego.
-
-Friday through Sunday nights, 207 guests are treated to music spun by DJs. Happy hour specials Monday through Friday from 3pm to 7pm.</p>
-
-
-<h3>Upcoming Events</h3>
-<p>Sunday Social with Sharam<br/>
-
-Sunday, December 14, 9:00 p.m.</p>
-
-<p>Prayers, Julien-K, Pleasure Fix<br/>
-
-Thursday, December 18, 9:00 p.m.</p>
-
-<h3>Happy Hours</h3>
-
-    <p>Monday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
-    <p>Tuesday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
-    <p>Wednesday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
-    <p>Thursday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
-    <p>Friday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
-
-            </div>
+              <p>Monday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
+              <p>Tuesday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
+              <p>Wednesday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
+              <p>Thursday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
+              <p>Friday: 3pm-7pm: $5 beers, $7 well drinks, $7 house wine, $8 Belvedere martinis, $8 specialty cocktails. 30%-off all food menu items.</p>
+        </div>
+        <div class="col-md-4">
+          <div class="map-wrap">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3357.193897346853!2d-117.15938500000003!3d32.707474999999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9535a58565097%3A0xea18d6f0d39dc15a!2s207+at+Hard+Rock+Hotel!5e0!3m2!1sen!2sus!4v1418433535477" width="400" height="300" frameborder="0" style="border:0"></iframe>
           </div>
+        </div>
+      </div>          
+      <div id="push"></div>
+    </div><!--/.container-->
 
-
-
-
-
-
-
-
-
-
-
-                          </div><!--/.col-xs-12.col-sm-9-->
-
-                          <div class="col-md-4 sidebar-offcanvas" id="sidebar" role="navigation">
-                            <h2>Maps and Directions</h2>
-
-                            <div class="list-group">
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3357.193897346853!2d-117.15938500000003!3d32.707474999999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9535a58565097%3A0xea18d6f0d39dc15a!2s207+at+Hard+Rock+Hotel!5e0!3m2!1sen!2sus!4v1418433535477" width="400" height="300" frameborder="0" style="border:0"></iframe>
-                            </div>
-                          </div><!--/.sidebar-offcanvas-->
-                        </div><!--/row-->
-                        <div id="push"></div>
-                      </div><!--/.container-->
-<!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <p class="text-muted">Alfredo Rodriguez, Casey Graff, Melissa Wong. <a href="./design.html">Design Site.</a> &copy; 2014</p>
       </div>
     </footer>
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
