--- a/news_el.html
+++ b/news_el.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>SDScene - Venues</title>
+    <title>SDScene - News</title>
 
     <link href="./css/offcanvas.css" rel="stylesheet">
     <link href="./yamm/yamm.css" rel="stylesheet">
@@ -66,8 +66,8 @@
                   <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">
                     <li class="nav-li-final"><a href="./events.html">Events</a></li>
-                    <li class="nav-li-final"><a href="./news.html">News</a></li>
-                    <li class="active nav-li-final"><a href="./venues.html">Venues</a></li>
+                    <li class="active nav-li-final"><a href="./news.html">News</a></li>
+                    <li class="nav-li-final"><a href="./venues.html">Venues</a></li>
                     <li class="nav-li-final"><a href="./artists.html">Artists</a></li>
                   </ul>
                 </div><!--/.nav-collapse -->
@@ -80,64 +80,57 @@
           <div class="row">
             <div class="breadcrumb">
               <a href="./index.html">Home</a>
-              <a href="#" class="active">Venues</a>
+              <a href="./news.html">News</a>
+              <a href="#" class="active">Members of El Monte Slim form new band</a>
             </div>
           </div>
           <!-- End Breadcrumbs -->
 
           <!-- Start Top Row -->
           <div class="row">
-            <!-- Carousel -->
-            <div class= "col-md-9 small-carousel">
-              <a href="./venues_207.html" class="clickable-div">
-              <div class="col-md-3 top-event top-news">
-                <img src="./images/venues_207.jpg" alt="">
-                <p class="content-header news-header">Club 207</p>
-                <p class="content-subline">Located on the ground floor of the famed Hard Rock Hotel San Diego, 207 is the ultimate spot to unwind during the day over local craft beers while watching the game on several flat screen TVs or to indulge in specialty cocktails at happy hour.  </p>
+            <!-- Info -->
+            <div class= "col-md-9 info-major">
+              <div class="info-header">Members of El Monte Slim form new band</div>
+              <div class="col-md-3 info-image-section">
+                <img src="./images/news_el.jpg" alt="">
               </div>
-            </a>
-            <a href="http://98bottlessd.com/" class="clickable-div">
-              <div class="col-md-3 top-event top-news">        
-                <img src="./images/venues_98.jpg" alt="">
-                <p class="content-header news-header">98 Bottles</p>
-                <p class="content-subline">The Back Room is our entertainment and event venue. It is where we host a variety of entertainment from live music to art to spoken word.</p>
+              <div class="col-md-9 info-text-section">
+                <p class="content-line info-subtitle">Jeff Terich</p>
+                <p class="content-subline content-sublineinfo-subtitle">November 18th, 2014</p>
+                <hr/>
               </div>
-            </a>
-            <a href="http://airconditionedlounge.com/" class="clickable-div">
-              <div class="col-md-3 top-event top-news">
-                <img src="./images/venues_air.jpg" alt="">
-                <p class="content-header news-header">The Air Conditioned Lounge</p>
-                <p class="content-subline">The first thing you’ll notice about Air Conditioned Lounge is the distinct absence of air conditioning.</p>
-              </div>
-            </a>
-            <a href="http://www.houseofblues.com/sandiego/" class="clickable-div">
-              <div class="col-md-3 top-event top-news">
-                <img src="./images/venues_house.jpg" alt="">
-                <p class="content-header news-header">San Diego House of Blues</p>
-                <p class="content-subline">Rock- &amp; blues-themed chain with Southern dishes such as po' boys &amp; jambalaya, plus live music.</p>
-                </div>
-              </a>
+              <p class="info-text-para">Country / folk group El Monte Slim are on hiatus right now, but while that band has taken a break, three of its members have started up a new outfit called Ypsitucky.</p>
+                <p class="info-text-para">The band is fronted by singer and guitarist Ian Trumbull and includes bass player Ruben Ramos and drummer Paul Brewin. It also features cellist and fiddle player Heather Vorwerck, who’s performed occasionally with El Monte Slim. Trumbull says that Ypsitucky came about when El Monte Slim’s lap-steel player, Joe Camacho, decided to take a breather.</p>
+                <p class="info-text-para">“We had been working pretty hard at it for five years, but Joe needed a break,” Trumbull says. “Everyone else wanted to keep going, so we kept most of the same people but wrote all new songs. It didn’t seem right to do El Monte Slim without Joe.”</p>
+                <p class="info-text-para">Trumbull says that Ypsitucky have written about 15 songs so far and have been working on some “off-the-wall covers.” The project is still in the country / Americana vein but is a little bit more upbeat, he says. </p>
+                <a class="info-link" href="http://www.sdcitybeat.com/sandiego/article-13627-members-of-el-monte-slim-form-new-band.html">Read more at SD City Beat</a>
+              
+
             </div>
-            <!-- End Carousel -->
+            <!-- End Info -->
             <!-- Spotlight -->
             <div class="col-md-3 spotlight featured-news">
               <!-- Title -->
               <div>
-                <h3 class="spotlight-title">Featured Venue<span class="glyphicon glyphicon-star spotlight-glyp" aria-hidden="true"></span></h3>
+                <h3 class="spotlight-title">Similiar Stories<span class="glyphicon glyphicon-pushpin spotlight-glyp" aria-hidden="true"></span></h3>
               </div>
-              <h4 class="spotlight-subtitle">The North Park Theatre</h4>
-              <img class="spotlight-image" src="./images/venues_north.jpg" alt="">
-              <p>Restored circa-1939 theater has a red-decked cathedral hall for live music, plays, films &amp; more.</p>
-               <a href="http://thenorthparktheatre.com/">Read more...</a>
+             <!--  <a href="#test1" class="clickable-div"> -->
+                <div class="similiar-stories">        
+                  <p class="content-header news-header">Johnny Marr hits his solo stride</p>
+                  <p class="content-subline">Decemeber 10th, 2014</p>
+                </div>
+              <!-- </a> -->
+              <hr/>
+              <!-- <a href="#test1" class="clickable-div"> -->
+                <div class="similiar-stories">        
+                  <p class="content-header news-header">Black Star Elephant, by Nico &amp; Vinz</p>
+                  <p class="content-subline">Decemeber 12th, 2014</p>
+                </div>
+              <!-- </a> -->
             </div>
             <!-- End Spotlight -->
           </div>
           <!-- End Top Row -->
-            </a>
-          </div>    
-          <!-- End news row -->
-          <hr/>
-          
 
           <div id="push"></div>
       </div>
